Fix sizing of module on mobile devices

--- a/src/Components/PopUpModule/PopUpModule.css
+++ b/src/Components/PopUpModule/PopUpModule.css
@@ -1,7 +1,8 @@
 .Module {
   font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 600;
-  width: 380px;
+  width: 90%;
+  max-width: 380px;
   height: 500px;
   top: 10%;
 
@@ -12,13 +13,6 @@
   margin: auto;
 
   background-color: white;
-}
-
-.Darken-BG {
-  background-color: rgba(0, 0, 0, 0.37);
-  width: 100%;
-  height: 100%;
-  position: absolute;
 }
 
 .MuiCardContent-root {
